# fail2ban-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  FEATURES.md  LICENSE  README.md  deny.toml  justfile
.github/workflows/: ci.yml  release.yml
benches/: bench_matching_fail2ban.py  matching.rs  maxmind.rs
config/: default.toml  mac-dev.toml
scripts/: build-release.sh  install.sh
src/: ban_calc.rs  ban_calc_test.rs  ban_state.rs  circular.rs  circular_test.rs  config.rs  config_test.rs  control.rs  control_test.rs  date.rs  date_test.rs  duration.rs  duration_test.rs  error.rs  error_test.rs  executor.rs  executor_iptables.rs  executor_nftables.rs  executor_script.rs  executor_test.rs  filters.rs  filters_test.rs  ignore.rs  ignore_test.rs  lib.rs  log_format.rs  log_format_test.rs  logging.rs  logging_test.rs  main.rs  main_test.rs  matcher.rs  matcher_test.rs  output.rs  pattern.rs  pattern_test.rs  regex_tool.rs  regex_tool_test.rs  server.rs  server_test.rs  (+10 more)
src/config/: load.rs  load_test.rs  types.rs  types_test.rs  validate.rs  validate_test.rs
src/detect/: date.rs  date_test.rs  extract.rs  extract_test.rs  identity.rs  ignore.rs  ignore_test.rs  journal.rs  journal_test.rs  matcher.rs  matcher_test.rs  mod.rs  pattern.rs  pattern_test.rs  reader.rs  reader_test.rs  watcher.rs  watcher_test.rs
src/detect/filters/: auth.rs  auth_test.rs  db.rs  db_test.rs  ftp.rs  ftp_test.rs  mail.rs  mail_test.rs  misc.rs  misc_test.rs  mod.rs  mod_test.rs  voip.rs  voip_test.rs  vpn.rs  vpn_test.rs  web.rs  web_test.rs
src/enforce/: executor.rs  executor_test.rs  iptables.rs  iptables_test.rs  mod.rs  mod_test.rs  nftables.rs  nftables_test.rs  restore.rs  restore_test.rs  script.rs  script_test.rs  test_support.rs
src/server/: mod.rs  mod_test.rs  reload.rs  reload_test.rs  startup.rs
src/track/: ban_calc.rs  ban_calc_test.rs  circular.rs  circular_test.rs  commands.rs  commands_test.rs  execute.rs  failure.rs  failure_test.rs  maxmind.rs  maxmind_test.rs  mod.rs  persist.rs  persist_test.rs  regression_test.rs  run.rs  run_test.rs  sweep.rs  sweep_test.rs  test_support.rs  tracker_state.rs
tests/: e2e_ban.rs
