[package]
name = "fail2ban-rs"
version = "1.0.0"
edition = "2024"
description = "A pure-Rust fail2ban replacement. Single static binary, fast two-phase matching, nftables/iptables firewall backends."
license = "MIT"
repository = "https://github.com/aejimmi/fail2ban-rs"

[[bin]]
name = "fail2ban-rs"
path = "src/main.rs"

[dependencies]
aho-corasick = "1"
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
ipnet = { version = "2", features = ["serde"] }
nix = { version = "0.29", default-features = false, features = ["net"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tell = { version = "0.1", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "io-util", "net", "fs", "time", "process"] }
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
etchdb = "0.3.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[features]
default = []
tell = ["dep:tell"]
systemd = []

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
strip = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "matching"
harness = false
