[package]
name = "fail2ban-rs"
version = "1.2.2"
edition = "2024"
description = "A pure-Rust fail2ban replacement. Single static binary, fast two-phase matching, nftables/iptables firewall backends."
license = "MIT"
repository = "https://github.com/aejimmi/fail2ban-rs"

[[bin]]
name = "fail2ban-rs"
path = "src/main.rs"

[dependencies]
aho-corasick = "1"
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
ipnet = { version = "2", features = ["serde"] }
nix = { version = "0.29", default-features = false, features = ["net"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tell = { version = "0.1", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "io-util", "net", "fs", "time", "process"] }
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
etchdb = "0.3.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
maxminddb = { version = "0.27", features = ["mmap", "simdutf8"], optional = true }

[features]
default = ["maxmind"]
maxmind = ["dep:maxminddb"]
tell = ["dep:tell"]

[lints.clippy]
correctness = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Restriction cherry-picks
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "warn"
unwrap_used = "deny"
indexing_slicing = "warn"
panic = "deny"
dbg_macro = "deny"
# Pedantic overrides — see clippy.toml for rationale
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
wildcard_imports = "allow"
return_self_not_must_use = "allow"
too_many_lines = "allow"
match_same_arms = "allow"
used_underscore_binding = "allow"
doc_markdown = "allow"
struct_excessive_bools = "allow"
items_after_statements = "allow"
similar_names = "allow"

[lints.rust]
unsafe_code = "warn"

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.bench]
lto = false
codegen-units = 1

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
strip = true
overflow-checks = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "matching"
harness = false

[[bench]]
name = "maxmind"
harness = false
required-features = ["maxmind"]
